--- a/style.css
+++ b/style.css
@@ -18,5 +18,9 @@
 
 .centering {
   margin-top: 300px;
+  margin-left: 300px;
+  margin-right: 300px;
+  font-size: 21px;
+
   text-align: center;
 }
